{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 84,
  "lineage": "66238a51-6f39-c3e2-bf8d-2bd0a690cf11",
  "resources": [
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-028188d9b49b32a80",
            "arn": "arn:aws:ec2:eu-west-1:189139619842:instance/i-0ba5a36a611063ed0",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0ba5a36a611063ed0",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tfIrelandLamp",
            "monitoring": false,
            "primary_network_interface_id": "eni-05fe870539cf08d64",
            "private_dns": "ip-172-21-1-131.eu-west-1.compute.internal",
            "private_ip": "172.21.1.131",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-03a6dc59e860a022a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00a4a3f0e5a753df1",
            "tags": {
              "CR": "SHUTDOWN",
              "Name": "DB"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0739b2b265290573f"
            ]
          },
          "dependencies": [
            "aws_subnet.tf-db",
            "aws_vpc.tf-vpc",
            "module.db.aws_security_group.test-db",
            "module.web.aws_security_group.test-web"
          ]
        }
      ]
    },
    {
      "module": "module.web",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-1a962263",
            "arn": "arn:aws:ec2:eu-west-1:189139619842:instance/i-0f30f9bb5c11762c5",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0f30f9bb5c11762c5",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tfIrelandLamp",
            "monitoring": false,
            "primary_network_interface_id": "eni-0b223e33190de8737",
            "private_dns": "ip-172-21-0-188.eu-west-1.compute.internal",
            "private_ip": "172.21.0.188",
            "public_ip": "34.241.30.57",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-01f99f4e66a1992a5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-061f786e39602595d",
            "tags": {
              "CR": "SHUTDOWN",
              "Name": "Web"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e25c9fa006c5752c"
            ]
          },
          "dependencies": [
            "aws_subnet.tf-web",
            "aws_vpc.tf-vpc",
            "module.web.aws_security_group.test-web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_tf",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0eb518425f42a5ee8",
            "owner_id": "189139619842",
            "tags": {
              "Name": "TF - IGW"
            },
            "vpc_id": "vpc-04c84d7e2b171c401"
          },
          "dependencies": [
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "rt_tf_web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0eb518425f42a5ee8",
            "id": "r-rtb-07016a2e54b38eff61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07016a2e54b38eff6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.igw_tf",
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test-db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:189139619842:security-group/sg-0739b2b265290573f",
            "description": "Security Group for DB Server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0739b2b265290573f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e25c9fa006c5752c"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "test-db",
            "name_prefix": null,
            "owner_id": "189139619842",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-db"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c84d7e2b171c401"
          },
          "dependencies": [
            "aws_vpc.tf-vpc",
            "module.web.aws_security_group.test-web"
          ]
        }
      ]
    },
    {
      "module": "module.web",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test-web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:189139619842:security-group/sg-0e25c9fa006c5752c",
            "description": "Security Group for Web Server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e25c9fa006c5752c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "test-web",
            "name_prefix": null,
            "owner_id": "189139619842",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-web"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c84d7e2b171c401"
          },
          "dependencies": [
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf-db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:189139619842:subnet/subnet-00a4a3f0e5a753df1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "172.21.1.0/24",
            "id": "subnet-00a4a3f0e5a753df1",
            "map_public_ip_on_launch": false,
            "owner_id": "189139619842",
            "tags": {
              "Name": "tf-db"
            },
            "vpc_id": "vpc-04c84d7e2b171c401"
          },
          "dependencies": [
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf-web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:189139619842:subnet/subnet-061f786e39602595d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "172.21.0.0/24",
            "id": "subnet-061f786e39602595d",
            "map_public_ip_on_launch": true,
            "owner_id": "189139619842",
            "tags": {
              "Name": "tf-web"
            },
            "vpc_id": "vpc-04c84d7e2b171c401"
          },
          "dependencies": [
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:189139619842:vpc/vpc-04c84d7e2b171c401",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.21.0.0/16",
            "default_network_acl_id": "acl-001da1369113b4806",
            "default_route_table_id": "rtb-07016a2e54b38eff6",
            "default_security_group_id": "sg-0c0254d76228014e6",
            "dhcp_options_id": "dopt-843d45e2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-04c84d7e2b171c401",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07016a2e54b38eff6",
            "owner_id": "189139619842",
            "tags": {
              "Name": "TF VPC - Lamp"
            }
          }
        }
      ]
    }
  ]
}